LOG:

	   1.7.6 Fixed a bug related to xta_transaction_start() issued multiple
		 times on an object used for multiple branches transaction

2019-02-23 1.7.5 Docker images for LIXA (XTA for Java)
		 Fixed a build bug related to tests/src/java directory

2019-02-09 1.7.4 Docker image for LIXA client (command line utilities)
		 Added environment variable LIXA_STATE_SERVERS

2019-02-03 1.7.3 Docker image for LIXA state server: lixad
		 New build options, dedicated to disable single components and
		 syslog: they are useful to produce Docker images.
		 --disable-syslog build option can be used to have messages on
		 stderr instead of sending them to system logger.

2019-01-20 1.7.2 Java API for XTA
		 These functions/methods are now deprecated because useless:
		 - xta_transaction_open
		 - xta_transaction_close
		 they will be removed in the near future.
		 Renamed to lowercase C++ API methods
		 	Removed xta::Transaction.Open
		 	Removed xta::Transaction.Close
		 Renamed to lowercase Python API methods
		 	Removed Transaction.Open
		 	Removed Transaction.Close
		 *** WARNING: ***
		 This release breaks compatibility with previous versions of
		 C++ and Python XTA API: the first char of the method names
		 must be changed from Uppercase to lowercase
		 *** WARNING: ***
		 This release is *NOT* compatible with previous ones: you can't
		 mix 1.7.2 and previous versions in the same environment
		 (message LXC030E will be logged in the event of level
		 mismatch); LIXA_MSG_LEVEL=3.
		 *** NOTE: ***
		 This release uses function get_native_connection() instead of
		 _get_native_connection() as it's provided by psycopg2 2.8
		 (next release, already in git master tree)

2018-10-28 1.7.1 Python API for XTA
		 Both Python 2 and Python 3 can be used with XTA for Python.
		 Examples in doc/examples/xta/python tested with:
		 - Ubuntu 14.04
		   - MySQL      5.5.61
		   - PostgreSQL 9.3.24
		   - Python2    2.7.6
		   - Python3    3.4.3
		 - RHEL 7.5
		   - MariaDB    5.5.60