@@ -74,6 +74,7 @@
  * 12:   subordinate branch / xta_transaction_rollback() generic error
  * 13:   subordinate branch / xta_transaction_commit() generic error
  * 14:   xta_transaction_close() generic error
+ * 15:   superior branch / xta_transaction_commit() -> LIXA_RC_MULTIBRANCH_PREPARE_FAILED
  */
 
 
@@ -283,6 +284,8 @@ void superior(void)
                 exit(7);
             else if (rc == LIXA_RC_TX_HAZARD)
                 exit(9);
+            else if (rc == LIXA_RC_MULTIBRANCH_PREPARE_FAILED)
+                exit(15);
             else
                 exit(4);
         }
