@@ -1,10 +1,10 @@
 # XTA (XA Transaction API) case tests
 
 # C API and transaction management
-m4_include([xta_4.at])
 m4_include([xta_1.at])
 m4_include([xta_2.at])
 m4_include([xta_3.at])
+m4_include([xta_4.at])
 m4_include([xta_5_0.at])
 m4_include([xta_5_5.at])
 m4_include([xta_6.at])
